--- a/car_trade_project/ui/src/main/resources/static/seller_user_center.html
+++ b/car_trade_project/ui/src/main/resources/static/seller_user_center.html
@@ -192,8 +192,11 @@
                                     <li><b>Tel </b><p>2016/2017</p></li>
                                 </ul>
                             </div>
+                            <div class="row mycar_uploadcar_btn">
+                                <button class="btn" id=""><a href="seller_car_center.html">My Cars</a></button>
+                            </div>
                             <div class="row">
-                                <button class="btn"><a href="seller_car_center.html">My Cars</a></button>
+                                <button class="btn"><a href="seller_upload_car.html">Upload New Car</a></button>
                             </div>
                         </div>
                     </div>
@@ -202,9 +205,6 @@
         </div>
     </div>
 </div>
-
-
-
 
 <footer>
     <div class="container">
