getUserInfo update, 有bug

--- a/car_trade_project/ui/src/main/resources/static/buyer_register.html
+++ b/car_trade_project/ui/src/main/resources/static/buyer_register.html
@@ -4,10 +4,10 @@
 </head>
 <body>
 <form action="/BuyerAPI/regist" method="post">
-    手机号:<input name="BTel" type="text"><br>
+    手机号:<input name="btel" type="text"><br>
     密码:<input name="bpassword" type="password"> <br>
-    姓名:<input name="BName" type="text"><br>
-    通讯地址:<input name="BAddress" type="text"><br>
+    姓名:<input name="bName" type="text"><br>
+    通讯地址:<input name="baddress" type="text"><br>
     <input type="submit" value="注册">
 </form>
 </body>
