--- a/car_trade_project/ui/src/main/resources/static/login_register-buyer.html
+++ b/car_trade_project/ui/src/main/resources/static/login_register-buyer.html
@@ -367,7 +367,7 @@
                                                                         }
                                                                     )
                                                                     .then(function (res) {
-                                                                        if (res.data.code === 1) {
+                                                                        if (res.data.success === true) {
                                                                             alert("REGISTER SUCCESS!\nPLEASE LOGIN!")
                                                                             window.location.herf = "/login_register-buyer";
                                                                         } else {
