SellerService等功能的上传

--- a/car_trade_project/ui/src/main/resources/static/buyer_login.html
+++ b/car_trade_project/ui/src/main/resources/static/buyer_login.html
@@ -3,9 +3,9 @@
     <title>商家登录</title>
 </head>
 <body>
-<form action="/BuyerAPI/login" method="post">
-    手机号:<input name="btel" type="text"/><br>
-    密码:<input name="bpassword" type="password"> <br>
+<form action="/SellerAPI/login" method="post">
+    手机号:<input name="Username" type="text"/><br>
+    密码:<input name="Password" type="password"> <br>
     <input type="submit" value="登录">
     <a href="updateUserPassword.html">修改密码</a>
 </form>
