--- a/car_trade_project/ui/src/main/resources/static/buyer_register.html
+++ b/car_trade_project/ui/src/main/resources/static/buyer_register.html
@@ -1,9 +1,9 @@
 <head>
     <meta charset="UTF-8">
-    <title>用户注册</title>
+    <title>商家注册</title>
 </head>
 <body>
-<form action="/BuyerAPI/regist" method="post">
+<form action="/SellerAPI/regist" method="post">
     手机号:<input name="btel" type="text"><br>
     密码:<input name="bpassword" type="password"> <br>
     姓名:<input name="bName" type="text"><br>
