--- a/car_trade_project/ui/src/main/resources/static/buyer_cart.html
+++ b/car_trade_project/ui/src/main/resources/static/buyer_cart.html
@@ -165,8 +165,8 @@
 					<div class="heading-content-bg wow fadeIn" data-wow-delay="0.75s" data-wow-duration="1s">
 						<div class="row">
 							<div class="heading-content col-md-12">
-								<p><a href="index.html">Homepage</a> / <em> User Center</em></p>
-								<h2>User <em>Center</em></h2>
+								<p><a href="index.html">Homepage</a> / <em> Buyer Cart</em></p>
+								<h2>Buyer <em>Cart</em></h2>
 							</div>
 						</div>
 					</div>
