--- a/car_trade_project/ui/src/main/resources/static/login_register-seller.html
+++ b/car_trade_project/ui/src/main/resources/static/login_register-seller.html
@@ -185,72 +185,185 @@
 	                            <div class="loginform">
 	                                <div class="checkout-login-form login-form">
 	                                     <h4>login</h4>
-	                                     <form>
+	                                     <form id="login_app">
 	                                       <div class="form-group">
 	                                         <label for="exampleInputEmail12">Username</label>
-	                                         <input type="email" class="form-control" id="exampleInputEmail12" aria-describedby="emailHelp">
+	                                         <input type="email" class="form-control" id="exampleInputEmail12" aria-describedby="emailHelp" v-model="Log_username">
 	                                       </div>
 	                                       <div class="form-group">
 	                                         <label for="exampleInputPassword13">Password</label>
-	                                         <input type="password" class="form-control" id="exampleInputPassword13">
+	                                         <input type="password" class="form-control" id="exampleInputPassword13" v-model="Log_password">
 	                                       </div>
 	                                         <div class="form-group less-mt">
 	                                             <div class="checkbox">
-	                                                 <button type="submit" class="btn login-btn">login</button>
-	                                                 <input id="checkbox15" type="checkbox">
-	                                                 <label for="checkbox15">
-	                                                    Remember me
-	                                                 </label>
+	                                                 <button type="submit" class="btn login-btn" @click="seller_login_submit()">login</button>
 	                                             </div>
+												 <script>
+													 var data;
+													 const login_app = {
+														 data() {
+															 return {
+																 Log_username: "?",
+																 Log_password: "?"
+															 }
+														 },
+														 methods: {
+															 seller_login_submit() {
+																 data = new FormData();
+																 data.append("Username", this.Log_username);
+																 data.append("Password", this.Log_password);
+																 axios
+																		 // .post('http:116.63.170.243:9090/buyer_login??',
+																		 // 		{
+																		 // 			Username:this.Log_username,
+																		 // 			Password:this.Log_password
+																		 // 		})
+																		 // .then(function (res) {
+																		 // 	if (res.data.status === true) {
+																		 // 		window.location.href='/index';
+																		 // 	} else {
+																		 // 		//errMsg后端返回
+																		 // 		alert(res.data.errMsg);
+																		 // 	}
+																		 // }
+																		 // 		.catch(function (error) { // 请求失败处理,error后端返回
+																		 // 			console.log(error);
+																		 // 		}));
+																		 .post('/BuyerAPI/login',
+																				 data,
+																				 {headers: {'Content-Type': "multipart/form-data"}})
+																		 .then(function (res) {
+																			 if (res.data.success || res.data.code) {
+																				 alert("LOGIN SUCCESS!");
+																				 $.cookie('isSeller', true);
+																				 $.cookie('SellerID', res.data.id);
+																				 $.cookie('Token', res.data.token);
+																				 alert(res.data.msg);
+																				 window.location = "/index.html";
+																			 } else {
+																				 alert("FAILED!");
+																			 }
+																		 })
+																		 .catch(function (error) { // 请求失败处理,error后端返回
+																			 console.log(error);
+																			 alert(error);
+																		 });
+															 }
+														 }
+													 }
+													 Vue.createApp(login_app).mount("#login_app")
+												 </script>
 	                                         </div>
 <!-- 	                                       <a href="#" class="lost-pass">Lost your password? </a> -->
 	                                     </form>
 	                                 </div>
 	                            </div>
 	                        </div>
-	                        <div class="col-xl-6">
-	                            <div class="loginform">
-	                                <div class="checkout-login-form login-form">
+							<div class="col-xl-6">
+								<div class="loginform">
+									<div class="checkout-login-form login-form">
 										<h4>Register</h4>
-										 <form>
-<!-- 											 <label>What do you want to be </label>
-											 <div class="checkbox">
-											   <input id="checkbox16" type="checkbox">
-											   <label for="checkbox16" class="choice">
-												  Buyer
-											   </label>
-											   <input id="checkbox17" type="checkbox">
-											   <label for="checkbox17" class="choice">
-												  Seller
-											   </label>
-											 </div> -->
-										   <div class="form-group">
-										     <label>Username</label>
-										     <input class="form-control">
-										   </div>
-										   <div class="form-group">
-										     <label for="exampleInputEmail12">Tel</label>
-										     <input class="form-control">
-										   </div>
-	                                       <div class="form-group">
-	                                         <label for="exampleInputEmail14">Address</label>
-	                                         <input type="email" class="form-control" id="exampleInputEmail14" aria-describedby="emailHelp">
-	                                       </div>
-	                                       <div class="form-group">
-	                                         <label for="exampleInputPassword15">Password</label>
-	                                         <input type="password" class="form-control" id="exampleInputPassword15">
-	                                       </div>
+										<form id="register_app">
+											<!-- 											 <label>What do you want to be </label>
+                                                                                         <div class="checkbox">
+                                                                                           <input id="checkbox16" type="checkbox">
+                                                                                           <label for="checkbox16" class="choice">
+                                                                                              Buyer
+                                                                                           </label>
+                                                                                           <input id="checkbox17" type="checkbox">
+                                                                                           <label for="checkbox17" class="choice">
+                                                                                              Seller
+                                                                                           </label>
+                                                                                         </div> -->
+											<div class="form-group">
+												<label>Username</label>
+												<input class="form-control" v-model="Username">
+											</div>
+											<div class="form-group">
+												<label>Gender</label>
+												<div class="checkbox">
+													<input id="checkbox18" type="checkbox" value="Male"
+														   v-model="Gender_male">
+													<label for="checkbox18" class="choice">
+														Male
+													</label>
+													<input id="checkbox19" type="checkbox" value="Female"
+														   v-model="Gender_female">
+													<label for="checkbox19" class="choice">
+														Female
+													</label>
+												</div>
+											</div>
+											<div class="form-group">
+												<label> Address</label>
+												<input class="form-control" v-model="Address">
+											</div>
+											<div class="form-group">
+												<label for="exampleInputEmail14">Tel</label>
+												<input class="form-control" id="exampleInputEmail14" v-model="Tel">
+											</div>
+											<div class="form-group">
+												<label for="exampleInputPassword15">Password</label>
+												<input type="password" class="form-control" id="exampleInputPassword15"
+													   v-model="Password">
+											</div>
 
-	                                       <div class="form-group less-mt">
-	                                             <div class="checkbox">
-	                                                 <button type="submit" class="btn login-btn">register</button>
-	                                             </div>
-	                                         </div>
-											 
-	                                     </form>
-	                                 </div>
-	                            </div>
-	                        </div>
+											<div class="form-group less-mt">
+												<div class="checkbox">
+													<button type="submit" class="btn login-btn"
+															@click="seller_register_submit()">register
+													</button>
+													<script>
+														const register_app = {
+															data() {
+																return {
+																	Username: "?",
+																	Gender_male: "?",
+																	Address: "?",
+																	Tel: "?",
+																	Password: "?"
+																}
+															},
+															methods: {
+																seller_register_submit() {
+																	alert(this.Username);
+																	let data = new FormData();
+																	data.append("Username", this.Username);
+																	data.append("Gender", this.Gender_male ? "Male" : "Female");
+																	data.append("Address", this.Address);
+																	data.append("Tel", this.Tel);
+																	data.append("Password", this.Password);
+																	axios
+																			.post('/BuyerAPI/regist',
+																					data,
+																					{
+																						headers: {'Content-Type': "multipart/form-data"}
+																					}
+																			)
+																			.then(function (res) {
+																				if (res.data.code === 1) {
+																					alert("REGISTER SUCCESS!\nPLEASE LOGIN!")
+																					window.location.herf = "/login_register-seller";
+																				} else {
+																					alert("FAILED!")
+																				}
+																			})
+																			.catch(function (error) { // 请求失败处理
+																				console.log(error);
+																				alert("error")
+																			});
+																}
+															}
+														}
+														Vue.createApp(register_app).mount("#register_app")
+													</script>
+												</div>
+											</div>
+
+										</form>
+									</div>
+								</div>
+							</div>
 						</div>
 	                </div>
 	            </div>
