--- a/car_trade_project/ui/src/main/resources/static/buyer_cart.html
+++ b/car_trade_project/ui/src/main/resources/static/buyer_cart.html
@@ -50,6 +50,7 @@
 	<!-- Responsive CSS -->
 	<link rel="stylesheet" href="assets/css/responsive.css">
 
+
 	<script src="assets/js/vue.global.js"></script>
 	<script src="assets/js/axios.min.js"></script>
 
@@ -57,6 +58,10 @@
 	<script src="assets/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="assets/libs/respond.js/1.3.0/respond.min.js"></script>
 	<![endif]-->
+
+	<!-- 使用cookie插件需要先引入jquery 且jquery只能在这里引用 不能二次引用-->
+	<script src="https://cdn.staticfile.org/jquery/3.4.0/jquery.min.js"></script>
+	<script src="https://cdn.staticfile.org/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
 </head>
 <body>
@@ -196,7 +201,7 @@
 									</div>
 									<div class="col-md-7">
 										<div class="down-content">
-											<a href="single_car.html"><h4>{{ car.name }}</h4></a>
+											<a href="single_car.html"><h4>{{ car.cid }}</h4></a>
 											<span>$36.000</span>
 											<div class="line-dec"></div>
 											<p>Drinking vinegar hoodie street art, selvage you probably haven't heard of them put a bird on it semiotics heirloom.</p>
@@ -215,13 +220,16 @@
 					<script>
 						const buyer_cart_list_app = {
 							data() {
+								var cart_len = parseInt($.cookie("cart_len"));
+								$arr = Array();
+								for(var i = 0; i < cart_len; i++) {
+									cart_seq = "cart" + i;
+									dic = {cid: ""};
+									dic["cid"] = parseInt($.cookie(cart_seq));
+									$arr.push(dic);
+								}
 								return {
-									cars: [
-										{name: "奔驰"},
-										{name: "宝马"},
-										{name: "保时捷"},
-										{name: "劳斯莱斯"}
-									]
+									cars: $arr
 								}
 							}
 						}
