对所有页面引入了cookie以及图标的cookie链接问题

--- a/car_trade_project/ui/src/main/resources/static/index.html
+++ b/car_trade_project/ui/src/main/resources/static/index.html
@@ -190,7 +190,7 @@
 					   		<a href="#search"><i class="fa fa-search"></i></a>
 					   </li>
 						<li id="LoginAndCenter">
-							<a href="buyer_user_center.html">
+							<a href="#">
 								<i class="icofont icofont-ui-user"></i>
 							</a>
 							<div class="addtocart-dropdown">
@@ -205,17 +205,17 @@
 							</div>
 						</li>
 						<li id="CartOrOrder" style="visibility:hidden;">
-							<a href="#"><i class="icofont icofont-shopping-cart"></i></a>
-							<div class="addtocart-dropdown">
-								<img src="assets/images/cart-angle.png" alt="cart">
-								<div class="total-price d-flex justify-content-between">
-									<span>Subtotal:</span>
-									<span>$259.00</span>
-								</div>
-								<div class="cart-botton">
-									<a href="cart.html" class="btn">view cart</a>
-								</div>
-							</div>
+<!--							<a href="#"><i class="icofont icofont-shopping-cart"></i></a>-->
+<!--							<div class="addtocart-dropdown">-->
+<!--								<img src="assets/images/cart-angle.png" alt="cart">-->
+<!--								<div class="total-price d-flex justify-content-between">-->
+<!--									<span>Subtotal:</span>-->
+<!--									<span>$259.00</span>-->
+<!--								</div>-->
+<!--								<div class="cart-botton">-->
+<!--									<a href="cart.html" class="btn">view cart</a>-->
+<!--								</div>-->
+<!--							</div>-->
 						</li>
 <!-- 						<li><a href="#"><i class="fa fa-calendar"></i></a>
 							<div class="addtocart-dropdown">
