--- a/car_trade_project/ui/src/main/resources/static/login_register-seller.html
+++ b/car_trade_project/ui/src/main/resources/static/login_register-seller.html
@@ -58,6 +58,68 @@
 	<script src="assets/libs/respond.js/1.3.0/respond.min.js"></script>
 	<![endif]-->
 
+	<script src="assets/js/jquery-1.11.0.min.js"></script>
+
+	<!-- Slider Pro Js -->
+	<script src="assets/js/sliderpro.min.js"></script>
+
+	<!-- Slick Slider Js -->
+	<script src="assets/js/slick.js"></script>
+
+	<!-- Owl Carousel Js -->
+	<script src="assets/js/owl.carousel.min.js"></script>
+
+	<!-- Boostrap Js -->
+	<script src="assets/js/bootstrap.min.js"></script>
+
+	<!-- Boostrap Js -->
+	<script src="assets/js/wow.animation.js"></script>
+
+	<!-- Custom Js -->
+	<script src="assets/js/custom.js"></script>
+
+	<script>
+		<!--	jquery code	-->
+		$(document).ready(function() {
+			if($.cookie('Token') && $.cookie('UserID')){ // 已经登录了
+				$("#LoginAndCenter").empty();
+				if($.cookie('isBuyer') === "true"){
+					$("#LoginAndCenter").html("<a href=\"buyer_user_center.html\">\n" +
+							"\t\t\t\t\t\t\t\t<i class=\"icofont icofont-ui-user\"></i>\n" +
+							"\t\t\t\t\t\t\t</a>");
+				} else {
+					$("#LoginAndCenter").html("<a href=\"seller_user_center.html\">\n" +
+							"\t\t\t\t\t\t\t\t<i class=\"icofont icofont-ui-user\"></i>\n" +
+							"\t\t\t\t\t\t\t</a>");
+				}
+			}
+		})
+		$(document).ready(function() {
+			if($.cookie('Token') && $.cookie('UserID')){ // 已经登录了
+				document.getElementById("CartOrOrder").style.visibility="visible";
+				if($.cookie('isBuyer') === "true"){
+					$("#CartOrOrder").html("<a href=\"buyer_cart.html\"><i class=\"icofont icofont-shopping-cart\"></i></a>\n + " +
+							"<div class=\"addtocart-dropdown\">\n" +
+							"\t\t\t\t\t\t\t\t<img src=\"assets/images/cart-angle.png\" alt=\"cart\">\n" +
+							"\t\t\t\t\t\t\t\t<div class=\"total-price d-flex justify-content-between\">\n" +
+							"\t\t\t\t\t\t\t\t\t<span>Subtotal:</span>\n" +
+							"\t\t\t\t\t\t\t\t\t<span>$259.00</span>\n" +
+							"\t\t\t\t\t\t\t\t</div>\n" +
+							"\t\t\t\t\t\t\t\t<div class=\"cart-botton\">\n" +
+							"\t\t\t\t\t\t\t\t\t<a href=\"cart.html\" class=\"btn\">view cart</a>\n" +
+							"\t\t\t\t\t\t\t\t</div>\n" +
+							"\t\t\t\t\t\t\t</div>")
+
+				} else {
+					$("#CartOrOrder").html("<a href=\"seller_cart.html\"><i class=\"fa fa-calendar\"></i></a>");
+				}
+			}
+		})
+
+
+
+
+	</script>
 </head>
 <body>
 
@@ -127,7 +189,7 @@
 					   <li>
 					   		<a href="#search"><i class="fa fa-search"></i></a>
 					   </li>
-						<li><a href="buyer_user_center.html"><i class="icofont icofont-ui-user"></i></a>
+						<li id="LoginAndCenter"><a href="#"><i class="icofont icofont-ui-user"></i></a>
 							<div class="addtocart-dropdown">
 								<img src="assets/images/cart-angle.png" alt="cart">
 								<div class="total-price d-flex justify-content-between">
@@ -139,17 +201,18 @@
 								</div>
 							</div>
 						</li>
-						<li><a href="#"><i class="icofont icofont-shopping-cart"></i></a>
-							<div class="addtocart-dropdown">
-								<img src="assets/images/cart-angle.png" alt="cart">
-								<div class="total-price d-flex justify-content-between">
-									<span>Subtotal:</span>
-									<span>$259.00</span>
-								</div>
-								<div class="cart-botton">
-									<a href="cart.html" class="btn">view cart</a>
-								</div>
-							</div>
+						<li id="CartOrOrder" style="visibility:hidden;">
+							<!--							<a href="#"><i class="icofont icofont-shopping-cart"></i></a>-->
+							<!--							<div class="addtocart-dropdown">-->
+							<!--								<img src="assets/images/cart-angle.png" alt="cart">-->
+							<!--								<div class="total-price d-flex justify-content-between">-->
+							<!--									<span>Subtotal:</span>-->
+							<!--									<span>$259.00</span>-->
+							<!--								</div>-->
+							<!--								<div class="cart-botton">-->
+							<!--									<a href="cart.html" class="btn">view cart</a>-->
+							<!--								</div>-->
+							<!--							</div>-->
 						</li>
 					</ul>
 				</div>
@@ -278,21 +341,6 @@
 											<div class="form-group">
 												<label>Username</label>
 												<input class="form-control" v-model="Username">
-											</div>
-											<div class="form-group">
-												<label>Gender</label>
-												<div class="checkbox">
-													<input id="checkbox18" type="checkbox" value="Male"
-														   v-model="Gender_male">
-													<label for="checkbox18" class="choice">
-														Male
-													</label>
-													<input id="checkbox19" type="checkbox" value="Female"
-														   v-model="Gender_female">
-													<label for="checkbox19" class="choice">
-														Female
-													</label>
-												</div>
 											</div>
 											<div class="form-group">
 												<label> Address</label>
@@ -668,25 +716,7 @@
 	</footer>
 	
 
-	<script src="assets/js/jquery-1.11.0.min.js"></script>
 
-	<!-- Slider Pro Js -->
-	<script src="assets/js/sliderpro.min.js"></script>
-
-	<!-- Slick Slider Js -->
-	<script src="assets/js/slick.js"></script>
-
-	<!-- Owl Carousel Js -->
-    <script src="assets/js/owl.carousel.min.js"></script>
-
-	<!-- Boostrap Js -->
-    <script src="assets/js/bootstrap.min.js"></script>
-
-    <!-- Boostrap Js -->
-    <script src="assets/js/wow.animation.js"></script>
-
-	<!-- Custom Js -->
-    <script src="assets/js/custom.js"></script>
 
 
 </body>
