--- a/car_trade_project/ui/src/main/resources/static/seller_car_center.html
+++ b/car_trade_project/ui/src/main/resources/static/seller_car_center.html
@@ -53,11 +53,78 @@
 	<script src="assets/js/vue.global.js"></script>
 	<script src="assets/js/axios.min.js"></script>
 
+
 	<!--[if lt IE 9]>
 	<script src="assets/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="assets/libs/respond.js/1.3.0/respond.min.js"></script>
 	<![endif]-->
 
+	<script src="assets/js/jquery-1.11.0.min.js"></script>
+
+	<!-- Slider Pro Js -->
+	<script src="assets/js/sliderpro.min.js"></script>
+
+	<!-- Slick Slider Js -->
+	<script src="assets/js/slick.js"></script>
+
+	<!-- Owl Carousel Js -->
+	<script src="assets/js/owl.carousel.min.js"></script>
+
+	<!-- Boostrap Js -->
+	<script src="assets/js/bootstrap.min.js"></script>
+
+	<!-- Boostrap Js -->
+	<script src="assets/js/wow.animation.js"></script>
+
+	<!-- Custom Js -->
+	<script src="assets/js/custom.js"></script>
+
+	<!-- 使用cookie插件需要先引入jquery 且jquery只能在这里引用 不能二次引用-->
+	<script src="https://cdn.staticfile.org/jquery/3.4.0/jquery.min.js"></script>
+	<script src="https://cdn.staticfile.org/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+
+	<script>
+		<!--	jquery code	-->
+		$(document).ready(function() {
+			if($.cookie('Token') && $.cookie('UserID')){ // 已经登录了
+				$("#LoginAndCenter").empty();
+				if($.cookie('isBuyer') === "true"){
+					$("#LoginAndCenter").html("<a href=\"buyer_user_center.html\">\n" +
+							"\t\t\t\t\t\t\t\t<i class=\"icofont icofont-ui-user\"></i>\n" +
+							"\t\t\t\t\t\t\t</a>");
+				} else {
+					$("#LoginAndCenter").html("<a href=\"seller_user_center.html\">\n" +
+							"\t\t\t\t\t\t\t\t<i class=\"icofont icofont-ui-user\"></i>\n" +
+							"\t\t\t\t\t\t\t</a>");
+				}
+			}
+		})
+		$(document).ready(function() {
+			if($.cookie('Token') && $.cookie('UserID')){ // 已经登录了
+				document.getElementById("CartOrOrder").style.visibility="visible";
+				if($.cookie('isBuyer') === "true"){
+					$("#CartOrOrder").html("<a href=\"buyer_cart.html\"><i class=\"icofont icofont-shopping-cart\"></i></a>\n + " +
+							"<div class=\"addtocart-dropdown\">\n" +
+							"\t\t\t\t\t\t\t\t<img src=\"assets/images/cart-angle.png\" alt=\"cart\">\n" +
+							"\t\t\t\t\t\t\t\t<div class=\"total-price d-flex justify-content-between\">\n" +
+							"\t\t\t\t\t\t\t\t\t<span>Subtotal:</span>\n" +
+							"\t\t\t\t\t\t\t\t\t<span>$259.00</span>\n" +
+							"\t\t\t\t\t\t\t\t</div>\n" +
+							"\t\t\t\t\t\t\t\t<div class=\"cart-botton\">\n" +
+							"\t\t\t\t\t\t\t\t\t<a href=\"cart.html\" class=\"btn\">view cart</a>\n" +
+							"\t\t\t\t\t\t\t\t</div>\n" +
+							"\t\t\t\t\t\t\t</div>")
+
+				} else {
+					$("#CartOrOrder").html("<a href=\"seller_cart.html\"><i class=\"fa fa-calendar\"></i></a>");
+				}
+			}
+		})
+
+
+
+
+	</script>
 </head>
 <body>
 
@@ -127,7 +194,7 @@
 					   <li>
 					   		<a href="#search"><i class="fa fa-search"></i></a>
 					   </li>
-						<li><a href="buyer_user_center.html"><i class="icofont icofont-ui-user"></i></a>
+						<li id="LoginAndCenter"><a href="#"><i class="icofont icofont-ui-user"></i></a>
 							<div class="addtocart-dropdown">
 								<img src="assets/images/cart-angle.png" alt="cart">
 								<div class="total-price d-flex justify-content-between">
@@ -139,17 +206,18 @@
 								</div>
 							</div>
 						</li>
-						<li><a href="#"><i class="icofont icofont-shopping-cart"></i></a>
-							<div class="addtocart-dropdown">
-								<img src="assets/images/cart-angle.png" alt="cart">
-								<div class="total-price d-flex justify-content-between">
-									<span>Subtotal:</span>
-									<span>$259.00</span>
-								</div>
-								<div class="cart-botton">
-									<a href="cart.html" class="btn">view cart</a>
-								</div>
-							</div>
+						<li id="CartOrOrder" style="visibility:hidden;">
+							<!--							<a href="#"><i class="icofont icofont-shopping-cart"></i></a>-->
+							<!--							<div class="addtocart-dropdown">-->
+							<!--								<img src="assets/images/cart-angle.png" alt="cart">-->
+							<!--								<div class="total-price d-flex justify-content-between">-->
+							<!--									<span>Subtotal:</span>-->
+							<!--									<span>$259.00</span>-->
+							<!--								</div>-->
+							<!--								<div class="cart-botton">-->
+							<!--									<a href="cart.html" class="btn">view cart</a>-->
+							<!--								</div>-->
+							<!--							</div>-->
 						</li>
 					</ul>
 				</div>
@@ -312,25 +380,7 @@
 	</footer>
 	
 
-	<script src="assets/js/jquery-1.11.0.min.js"></script>
 
-	<!-- Slider Pro Js -->
-	<script src="assets/js/sliderpro.min.js"></script>
-
-	<!-- Slick Slider Js -->
-	<script src="assets/js/slick.js"></script>
-
-	<!-- Owl Carousel Js -->
-    <script src="assets/js/owl.carousel.min.js"></script>
-
-	<!-- Boostrap Js -->
-    <script src="assets/js/bootstrap.min.js"></script>
-
-    <!-- Boostrap Js -->
-    <script src="assets/js/wow.animation.js"></script>
-
-	<!-- Custom Js -->
-    <script src="assets/js/custom.js"></script>
 
 
 </body>
