--- a/car_trade_project/ui/src/main/resources/static/index.html
+++ b/car_trade_project/ui/src/main/resources/static/index.html
@@ -693,7 +693,8 @@
 			</div>
 			<div class="container">
 				<div id="owl-testimonials" class="owl-carousel owl-theme">
-					<div id=seller_list class="item wow fadeIn" data-wow-duration="0.75s" v-for="seller in sellers">
+
+					<div id=seller_list class="item wow fadeIn" data-wow-duration="0.75s" v-for="seller in sellers" v-model="sellers">
 						<ul class="star-rating">
 							<li><i class="fa fa-star"></i></li>
 							<li><i class="fa fa-star"></i></li>
@@ -713,17 +714,56 @@
 				</div>
 			</div>
 			<script>
+				// $(document).ready(function() {
+				//
+				// 		$("#owl-testimonials").html("<div id=seller_list class=\"item wow fadeIn\" data-wow-duration=\"0.75s\">\n" +
+				// 				"\t\t\t\t\t\t<ul class=\"star-rating\">\n" +
+				// 				"\t\t\t\t\t\t\t<li><i class=\"fa fa-star\"></i></li>\n" +
+				// 				"\t\t\t\t\t\t\t<li><i class=\"fa fa-star\"></i></li>\n" +
+				// 				"\t\t\t\t\t\t\t<li><i class=\"fa fa-star\"></i></li>\n" +
+				// 				"\t\t\t\t\t\t\t<li><i class=\"fa fa-star\"></i></li>\n" +
+				// 				"\t\t\t\t\t\t\t<li><i class=\"fa fa-star\"></i></li>\n" +
+				// 				"\t\t\t\t\t\t</ul>\n" +
+				// 				"\t\t\t\t\t\t<div class=\"line-dec\"></div>\n" +
+				// 				"\t\t\t\t\t\t<p><em>\"</em> Integer sed ornare lacus, at convallis velit. Curabitur hendrerit congue convallis. Nunc vel tellus ut metus tincidunt facilisis sit amet et dolor <em>\"</em></p>\n" +
+				// 				"\t\t\t\t\t\t<div class=\"author-rate\">\n" +
+				// 				"\t\t\t\t\t\t\t<img src=\"assets/images/user_female.jpg\" alt=\"\">\n" +
+				// 				"\t\t\t\t\t\t\t<h4>Antonio Andreas</h4>\n" +
+				// 				"\t\t\t\t\t\t\t<div class=\"line-dec2\"></div>\n" +
+				// 				"\t\t\t\t\t\t\t<span>{{ seller.name }}</span>\n" +
+				// 				"\t\t\t\t\t\t</div>\n" +
+				// 				"\t\t\t\t\t</div>")
+				//
+				// })
+
+
+				sellers = [
+					{name: "zhangsan"},
+					{name: "lisi"},
+					{name: "hahaha"},
+					{name: "wangwu"},
+					{name: "haha"}
+				]
+
 				const sellers_show_app = {
 					data() {
 						return {
-							sellers:[
-								{name: "zhangsan"},
-								{name: "lisi"},
-								{name: "hahaha"},
-								{name: "wangwu"},
-								{name: "haha"}
-							]
+							sellers: sellers
 						}
+					},
+					mounted() {
+
+						axios
+							.get("#")
+							.then(response => {
+
+								this.sellers[0].name = "123123123";
+
+							})
+							.catch(function (error){
+								alert(error);
+							})
+
 					}
 				}
 				Vue.createApp(sellers_show_app).mount("#owl-testimonials")
