--- a/car_trade_project/ui/src/main/resources/static/index.html
+++ b/car_trade_project/ui/src/main/resources/static/index.html
@@ -695,8 +695,8 @@
 						<p> Tel: {{ seller.stel }}</p>
 						<div class="author-rate">
 							<img src="assets/images/user_female.jpg" alt="">
-							<h4><a href="#"> {{ seller.sname }} </a></h4>
-
+							<h4><a href="#">Antonio Andreas</a></h4>
+							<div class="line-dec2"></div>
 						</div>
 					</div>
 				</div>
@@ -715,7 +715,7 @@
 							.get("/SellerAPI/getAll")
 							// .get("#")
 							.then(response => {
-								for(let i=0; i<response.data.result_list.size(); i++){
+								for(let i=0; i<response.data.result_list.length; i++){
 									this.sellers.push({sname: response.data.result_list[i].sname,
 												       sid: response.data.result_list[i].sid,
 													   saddress: response.data.result_list[i].saddress,
